k8s/travelgroup-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travelgroup-service
  namespace: ecovista
spec:
  replicas: 1
  selector:
    matchLabels:
      app: travelgroup-service
  template:
    metadata:
      labels:
        app: travelgroup-service
    spec:
      containers:
      - name: travelgroup-service
        image: ecovista-travelgroup-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: travelgroup-service
  namespace: ecovista
spec:
  selector:
    app: travelgroup-service
  ports:
  - port: 5005
    targetPort: 5001
